# PrimeNumbersAndSieves

./: CMakeLists.txt  README.md
scripts/: PlotGraph.py  soe_data.csv
src/: SoE.cpp  SoE.h  main.cpp
